feat: loan module
