# models/entity.go
@@ -2,25 +2,23 @@ package models
 
 import (
 	"time"
-
-	"github.com/google/uuid"
 )
 
 type Borrower struct {
-	ID           uuid.UUID `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"id"`
-	FirstName    string    `gorm:"not null" json:"first_name"`
-	LastName     string    `gorm:"not null" json:"last_name"`
-	PhoneNumber  string    `gorm:"not null;unique" json:"phone_number"`
-	IsDelinquent bool      `gorm:"default:false" json:"is_delinquent"`
-	CreatedAt    time.Time `json:"created_at"`
-	UpdatedAt    time.Time `json:"updated_at"`
+	ID          string    `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"id"`
+	FirstName   string    `gorm:"not null" json:"first_name"`
+	LastName    string    `gorm:"not null" json:"last_name"`
+	PhoneNumber string    `gorm:"not null;unique" json:"phone_number"`
+	CreatedAt   time.Time `json:"created_at"`
+	UpdatedAt   time.Time `json:"updated_at"`
 }
 
 type Loan struct {
-	ID                   uuid.UUID `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"id"`
-	BorrowerID           uuid.UUID `gorm:"type:uuid;not null" json:"borrower_id"`
+	ID                   string    `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"id"`
+	BorrowerID           string    `gorm:"type:uuid;not null" json:"borrower_id"`
 	Amount               float64   `gorm:"not null" json:"amount"`
 	RepaymentCadenceDays int       `gorm:"not null" json:"repayment_cadence_days"`
+	RepaymentRepetition  int       `gorm:"not null" json:"repayment_repetition"`
 	InterestPercentage   float64   `gorm:"not null" json:"interest_percentage"`
 	InterestAmount       float64   `gorm:"not null" json:"interest_amount"`
 	Status               string    `gorm:"not null;default:'active'" json:"status"`
@@ -33,8 +31,8 @@ type Loan struct {
 }
 
 type LoanSchedule struct {
-	ID             uuid.UUID `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"id"`
-	LoanID         uuid.UUID `gorm:"type:uuid;not null" json:"loan_id"`
+	ID             string    `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"id"`
+	LoanID         string    `gorm:"type:uuid;not null" json:"loan_id"`
 	DueDate        time.Time `gorm:"not null" json:"due_date"`
 	BasicAmount    float64   `gorm:"not null" json:"basic_amount"`
 	InterestAmount float64   `gorm:"not null" json:"interest_amount"`
@@ -47,13 +45,13 @@ type LoanSchedule struct {
 }
 
 type LoanPayment struct {
-	ID              uuid.UUID   `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"id"`
-	LoanID          uuid.UUID   `gorm:"type:uuid;not null" json:"loan_id"`
-	LoanScheduleIDs []uuid.UUID `gorm:"type:uuid[]" json:"loan_schedule_ids"`
-	TotalPayment    float64     `gorm:"not null" json:"total_payment"`
-	PaymentMethod   string      `gorm:"not null" json:"payment_method"`
-	CreatedAt       time.Time   `json:"created_at"`
-	UpdatedAt       time.Time   `json:"updated_at"`
+	ID              string    `gorm:"type:uuid;primary_key;default:gen_random_uuid()" json:"id"`
+	LoanID          string    `gorm:"type:uuid;not null" json:"loan_id"`
+	LoanScheduleIDs []string  `gorm:"type:uuid[]" json:"loan_schedule_ids"`
+	TotalPayment    float64   `gorm:"not null" json:"total_payment"`
+	PaymentMethod   string    `gorm:"not null" json:"payment_method"`
+	CreatedAt       time.Time `json:"created_at"`
+	UpdatedAt       time.Time `json:"updated_at"`
 
 	Loan Loan `gorm:"foreignKey:LoanID" json:"loan,omitempty"`
 }
